# sermon-translate

./: run_ocr.ps1
.agent/rules/: project.md
caption_extractor/: README.md  ocr_worker.py  pubspec.yaml
caption_extractor/integration_test/: simple_test.dart
caption_extractor/lib/: main.dart
caption_extractor/lib/screens/: home_screen.dart
caption_extractor/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
caption_extractor/lib/src/rust/api/: gstreamer.dart  models.dart  models.freezed.dart  (+1 more)
caption_extractor/lib/widgets/: roi_player.dart  roi_selector.dart  video_info_card.dart  video_player_view.dart
caption_extractor/lib/widgets/video/: caption_timeline.dart  video_controls_bar.dart  video_screen.dart  video_sidebar.dart
caption_extractor/rust/: Cargo.toml
caption_extractor/rust/src/: frb_generated.rs  lib.rs
caption_extractor/rust/src/api/: gstreamer.rs  mod.rs  models.rs  simple.rs
caption_extractor/rust/src/gstreamer/: utils.rs
caption_extractor/rust/src/ocr/: mod.rs
caption_extractor/rust_builder/: pubspec.yaml
caption_extractor/rust_builder/android/: build.gradle  settings.gradle
caption_extractor/rust_builder/ios/: rust_lib_caption_extractor.podspec
caption_extractor/rust_builder/linux/: CMakeLists.txt
caption_extractor/rust_builder/macos/: rust_lib_caption_extractor.podspec
caption_extractor/rust_builder/windows/: CMakeLists.txt
caption_extractor/windows/: CMakeLists.txt
caption_extractor/windows/flutter/: generated_plugins.cmake
caption_extractor/windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
