[package]
name = "rust_lib_caption_extractor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
gstreamer-pbutils = "0.25"
image = "0.25"
anyhow = "1.0"
base64 = "0.22.1"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
